@@ -19,7 +19,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-VERSION		 = 20140711
+VERSION		 = 20141201
 LIBRARY_NAME	 = font-specimen
 LIBRARY_MAJOR    = 0
 LIBRARY_VERSION  = 0.0.0
